# noodles_async_fail

./: Cargo.toml  README.md
src/: main.rs
